--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "Voting Room",
   "dependencies": {
     "express": "^4.11.1",
+    "node-uuid": "^1.4.2",
     "socket.io": "^1.3.2"
   }
 }
