--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "express": "^4.11.1",
     "node-uuid": "^1.4.2",
+    "pg": "^4.2.0",
+    "pg-native": "^1.8.0",
     "socket.io": "^1.3.2"
   }
 }
