--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,8 @@
   "description": "Voting Room",
   "dependencies": {
     "express": "^4.11.1",
-    "node-uuid": "^1.4.2",
     "pg": "^4.2.0",
-    "pg-native": "^1.8.0",
+    "pg-query": "^0.11.0",
     "socket.io": "^1.3.2"
   }
 }
