--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "knockout": "~3.3.0"
+    "knockout": "~3.3.0",
+    "jquery-mobile": "~1.4.5"
   }
 }
