--- a/vt/plugins/nl.x-services.plugins.toast/plugin.xml
+++ b/vt/plugins/nl.x-services.plugins.toast/plugin.xml
@@ -72,4 +72,13 @@
     <source-file src="src/wp8/Toast.cs" />
   </platform>
 
+    <platform name="blackberry10">
+        <source-file src="src/blackberry10/index.js" target-dir="Toast"/>
+        <lib-file src="src/blackberry10/native/device/libToast.so" arch="device"/>
+        <lib-file src="src/blackberry10/native/simulator/libToast.so" arch="simulator"/>
+        <config-file target="www/config.xml" parent="/widget">
+            <feature name="Toast" value="Toast" />
+        </config-file>
+    </platform>
+  
 </plugin>
