--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "Voting Room",
   "dependencies": {
+    "engine.io": "^1.5.1",
+    "engine.io-client": "^1.5.1",
     "pg": "^4.2.0",
     "pg-query": "^0.11.0",
-    "socket.io": "^1.3.2"
+    "semver": "^4.3.3"
   }
 }
