--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@ www/js/*.min.js
 www/css/*.min.css
 vt/www
 
-vt/platforms/
-vt/plugins/
+vt/platforms/*
+!vt/platforms/android/
+vt/platforms/android/*
+!vt/platforms/android/AndroidManifest.xml
+vt/plugins/*
+!vt/plugins/android.json
