--- a/app/package.json
+++ b/app/package.json
@@ -4,11 +4,10 @@
   "description": "Voting Room",
   "dependencies": {
     "apn": "^1.7.4",
-    "engine.io": "^1.5.2",
-    "engine.io-client": "^1.5.2",
     "node-gcm": "^0.11.0",
     "pg": "^4.4.0",
     "pg-query": "^0.11.0",
-    "semver": "^4.3.6"
+    "semver": "^4.3.6",
+    "ws": "^0.8.0"
   }
 }
